--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "pricing": "Free",
     "icon": "derw_logo.png",
-    "main": "./out/src/extension",
+    "main": "./out/main",
     "contributes": {
         "languages": [
             {
@@ -40,11 +40,15 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
+        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+        "esbuild": "npm run esbuild-base -- --sourcemap",
+        "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
         "compile": "tsc -b"
     },
     "devDependencies": {
         "@types/node": "^17.0.42",
+        "esbuild": "^0.17.8",
         "typescript": "^4.7.3",
         "vscode": "^1.1.37"
     },
